--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -10,10 +10,11 @@ $bar = togglewaybar.sh
 
 # https://wiki.hyprland.org/Configuring/Monitors/
 #monitor = name, resolution, position, scale, transform, 0
-monitor = ,preferred,auto,auto,transform,0
+#monitor = ,preferred,auto,auto,transform,0
+#monitor = ,preferred,auto,1,mirror, LVDS-1
 monitor = LVDS-1, 1366x768@60, 0x0, 1, transform, 0
-monitor = VGA-1, 1680x1050@60, 1366x0, 1, transform, 1
-monitor = HDMI-A-1, 1680x1050@60, 1366x0, 1, transform, 1
+#monitor = VGA-1, 1680x1050@60, 1366x0, 1, transform, 1
+monitor = HDMI-A-1, 1680x1050@60, -1050x-912, 1, transform, 1
 
 exec-once = pcmanfm -d
 exec-once = foot --server
