refactor(hyprland): add beziers to borders anim
- Add animation beziers but keeping `border` animations turned off

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -107,8 +107,8 @@ animations {
     animation = fadeShadow, 1, 2, easeOutExpo
     animation = fadeLayersIn, 1, 4, easeInSine
     animation = fadeLayersOut, 1, 4, easeOutExpo
-    animation = border, 0
-    animation = borderangle, 0
+    animation = border, 0, 2, easeOutExpo
+    animation = borderangle, 0, 8, easeInOutExpo, once
     animation = workspaces, 1, 6, default, slide
     #animation = workspacesIn, 1, 6, easeOutBack, slide
     #animation = workspacesOut, 1, 6, easeOutBack, fade
