test(hyprland): add other `active_border` colors

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -41,7 +41,8 @@ general {
     gaps_out = 4
     gaps_workspaces = 40
     col.inactive_border = rgba(595959aa)
-    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    #col.active_border = rgba(97d01add) rgba(f7d01add) rgba(d72c1add) 45deg
+    #col.active_border = rgba(97d01add) rgba(d72c1add) rgba(f7d01add) 45deg
     col.active_border = rgba(97d01add)
     layout = dwindle
     allow_tearing = true
