refactor(hyprland): change `HEX` format to `rgba()`
Prettier to read

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -181,7 +181,7 @@ misc {
     disable_autoreload = false
     enable_swallow = false
     mouse_move_focuses_monitor = false
-    background_color = 0x777777
+    background_color = rgba(111111ff)
     new_window_takes_over_fullscreen = 2
     middle_click_paste = false
 }
