refactor(hyprland): change `cursor` configs
This way the cursor behaves better with a two monitors configuration.

- Set default monitor to `LVDS-1` (the internal laptop monitor)

- Set `no_warps` to `false` so the cursor can be bringed along to
  current focused monitor

- Set `warp_on_change_workspace` to bring the cursor along with the
  current focused monitor

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -203,9 +203,12 @@ cursor {
     no_hardware_cursors = true
     hotspot_padding = 5
     inactive_timeout = 2
-    no_warps = true
+    no_warps = false
     persistent_warps = true
+    warp_on_change_workspace = 1
+    default_monitor = LVDS-1
     zoom_factor = 1.000
+    enable_hyprcursor = false
     hide_on_key_press = false
 }
 
