feat(hyprland): add `#Monitor Rules` section
They're actually `workspace` rules but used to make monitor rules
anyways

- Bind workspace `10` to internal monitor (`LVDS-1`)

- Bind workspace `1` to external monitor (`HDMI-A-1`)

- Add some gaps to the external monitor (`HDMI-A-1`)

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -318,7 +318,10 @@ bind = $mod SHIFT, grave, movetoworkspace, special:magic
 windowrulev2 = suppressevent maximize,class:.*
 layerrule = animation slide,waybar
 
-windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+# Monitor Rules
+workspace = 10, monitor:LVDS-1, default:true
+workspace = 1, monitor:HDMI-A-1, default:true
+workspace = m[HDMI-A-1], gapsin:8, gapsout:16
 
 # floating-foot
 windowrulev2 = workspace special:magic,class:^(floating-foot)$
