feat(hyprland): manage scratchpad internally
From hyprwm/Hyprland@882f7ad7d2bbfc7440d0ccaef93b1cdd78e8e3ff

and so on, `Hyprland` now can toggle the special workspace internally,
there's no need to rely on `togglescrat.sh` shell script anymore

- No more exporting `FLOATINGTERM` as an environment variable aimed to
  be used only by `togglescrat.sh`

- Use the new `togglespecialworkspace` dispatcher instead of `exec` the
  `togglescrat.sh` script

- Use a workspace rule to open the `floatingTerminal` if the special
  workspace is created empty

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -30,7 +30,6 @@ env = QT_QPA_PLATFORM,wayland-egl
 env = SDL_VIDEODRIVER,wayland
 env = XDG_SESSION_TYPE,wayland
 env = _JAVA_AWT_WM_NONREPARENTING,1
-env = FLOATINGTERM,$floatingTerminal
 env = BROWSER,firefox
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -251,7 +250,7 @@ bind = $mod, Menu, exec, kblight
 
 # Keybinds/shortcuts for applications
 bind = $mod, Return, exec, $terminal
-bind = $mod, grave, exec, togglescrat.sh
+bind = $mod, grave, togglespecialworkspace, magic
 bind = $mod, A, exec, $menu
 bind = $mod, B, exec, $bar
 bind = $mod, E, exec, $fileManager
@@ -314,9 +313,9 @@ bind = $mod SHIFT, grave, movetoworkspace, special:magic
 # https://wiki.hyprland.org/Configuring/Window-Rules/#layer-rules
 # https://wiki.hyprland.org/Configuring/Workspace-Rules/#workspace-rules
 
-#workspace = special:magic,bordersize:2
+# Global Rules
 windowrulev2 = suppressevent maximize,class:.*
-layerrule = animation slide,waybar
+workspace = special:magic, on-created-empty:$floatingTerminal, border:false
 
 # Monitor Rules
 workspace = 10, monitor:LVDS-1, default:true
