refactor(hyprland): rearrange rules alphabetically
Specific `RULES` subsections are now alphabetically ordered, to search
trought them easily

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -338,8 +338,8 @@ windowrulev2 = forcergbx 1,class:^(mpv)$
 windowrulev2 = immediate 1, class:^(mpv)$
 windowrulev2 = xray 0,class:^(mpv)$
 
-# swayimg
-windowrulev2 = immediate 1, class:^(swayimg)$
+# pavucontrol
+windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
 
 # rofi
 layerrule = blur,rofi
@@ -354,6 +354,12 @@ windowrulev2 = float,class:^(scrcpy)$,title:^(SM-G935F)$
 windowrulev2 = size 32% 99%,class:^(scrcpy)$,title:^(SM-G935F)$
 windowrulev2 = tile,class:^(scrcpy)$,title:^(SM-G935F)$
 windowrulev2 = pseudo,class:^(scrcpy)$,title:^(SM-G935F)$
+
+# swayimg
+windowrulev2 = immediate 1, class:^(swayimg)$
+
+# waybar
+layerrule = animation slide,waybar
 
 # V4L2 Viewer
 #windowrulev2 = opaque,class:^(qvidcap)$,title:^(V4L2 Viewer)$
