refactor(hyprland): remove duplicate `V4L2` rules

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -362,23 +362,14 @@ windowrulev2 = immediate 1, class:^(swayimg)$
 layerrule = animation slide,waybar
 
 # V4L2 Viewer
-#windowrulev2 = opaque,class:^(qvidcap)$,title:^(V4L2 Viewer)$
-#windowrulev2 = forcergbx,class:^(qvidcap)$,title:^(V4L2 Viewer)$
-#windowrulev2 = noblur,class:^(qvidcap)$,title:^(V4L2 Viewer)$
-#windowrulev2 = nodim,class:^(qvidcap)$,title:^(V4L2 Viewer)$
-#windowrulev2 = noshadow,class:^(qvidcap)$,title:^(V4L2 Viewer)$
-#windowrulev2 = xray off,class:^(qvidcap)$,title:^(V4L2 Viewer)$
-#windowrulev2 = float,class:^(qvidcap)$,title:^(V4L2 Viewer)$
-#windowrulev2 = pseudo,class:^(qvidcap)$,title:^(V4L2 Viewer)$
-#windowrulev2 = tile,class:^(qvidcap)$,title:^(V4L2 Viewer)$
-windowrulev2 = opaque,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
-windowrulev2 = forcergbx,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
-windowrulev2 = noblur,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
-windowrulev2 = nodim,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
-windowrulev2 = noshadow,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
-windowrulev2 = xray off,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
-windowrulev2 = float,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
-windowrulev2 = pseudo,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
-windowrulev2 = tile,class:^(qvidcap|qv4l2)$,title:(Viewer|Capture)
+windowrulev2 = opaque,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
+windowrulev2 = forcergbx,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
+windowrulev2 = noblur,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
+windowrulev2 = nodim,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
+windowrulev2 = noshadow,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
+windowrulev2 = xray off,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
+windowrulev2 = float,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
+windowrulev2 = pseudo,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
+windowrulev2 = tile,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
 
 # vim: ft=hypr tabstop=4 shiftwidth=4 expandtab ai
