refactor(waybar): show bar only in one monitor

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -3,6 +3,7 @@
 /* https://github.com/Alexays/Waybar/wiki/Configuration */
 {
     "layer": "top",
+    "output": "LVDS-1",
     "position": "top",
     "height": 24,
     //"width": 1280,
