--- a/config/waybar/config
+++ b/config/waybar/config
@@ -29,6 +29,7 @@
     // Modules configuration
     "hyprland/workspaces": {
 	"active-only": false,
+	"all-outputs": true,
 	"format": "{icon}",
 	"format-icons": {
 	"1": "一",
