refactor(waybar): add hyprland/window configs
Note on `max-length` JSON name: It is documented in `sway/window` not in
`hyprland/window` but anyways works on the latter. See Alexays/Waybar#2898

- Add some `rewrite` to use emojis when focusing a VIM or Firefox window

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -50,6 +50,17 @@
 	"show-special": true,
 	"special-visible-only": true
     },
+    "hyprland/window": {
+	"format": "{title}",
+	"rewrite": {
+	    "(.*) — Mozilla Firefox": "🌎  $1",
+	    "(.*) - VIM": "📝  $1"
+	},
+	"separate-outputs": false,
+	"icon": false,
+	"icon-size": 20,
+	"max-length": 100
+    },
     "keyboard-state": {
         "numlock": true,
         "capslock": true,
