refactor(hyprland): add wallpaper to `HDMI-A-1` out

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -19,6 +19,7 @@ monitor = HDMI-A-1, 1680x1050@60, -1050x-912, 1, transform, 1
 exec-once = pcmanfm -d
 exec-once = foot --server
 exec-once = swaybg --output LVDS-1 --mode fill --image /usr/share/backgrounds/fgm.png
+exec-once = swaybg --output HDMI-A-1 --mode fit --color 000000 --image /usr/share/backgrounds/pluto-portrait-enhanced-color.png
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
