feat(hyprland): change navigation keybindings
From being more `i3` like to be more `vim` like

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -272,14 +272,14 @@ bind = $mod ALT CTRL SHIFT, Return, submap, reset
 submap = reset
 
 # Navigation
-bind = $mod, J, movefocus, l
-bind = $mod, semicolon, movefocus, r
+bind = $mod, H, movefocus, l
+bind = $mod, J, movefocus, d
 bind = $mod, K, movefocus, u
-bind = $mod, L, movefocus, d
-bind = $mod SHIFT, J, movewindow, l
-bind = $mod SHIFT, semicolon, movewindow, r
+bind = $mod, L, movefocus, r
+bind = $mod SHIFT, H, movewindow, l
+bind = $mod SHIFT, J, movewindow, d
 bind = $mod SHIFT, K, movewindow, u
-bind = $mod SHIFT, L, movewindow, d
+bind = $mod SHIFT, L, movewindow, r
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
 
