style(hyprland): split workspaces between outputs
Half and a half.

- Assign workspaces from `1` to `5` to the `HDMI-A-1` output

- Assign workspaces from `6` to `10` to the `LVDS-1` output

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -319,9 +319,17 @@ windowrulev2 = suppressevent maximize,class:.*
 workspace = special:magic, on-created-empty:$floatingTerminal, border:false
 
 # Monitor Rules
-workspace = 10, monitor:LVDS-1, default:true
-workspace = 1, monitor:HDMI-A-1, default:true
 workspace = m[HDMI-A-1], gapsin:8, gapsout:16
+workspace = 1, monitor:HDMI-A-1, default:true
+workspace = 2, monitor:HDMI-A-1
+workspace = 3, monitor:HDMI-A-1
+workspace = 4, monitor:HDMI-A-1
+workspace = 5, monitor:HDMI-A-1
+workspace = 6, monitor:LVDS-1
+workspace = 7, monitor:LVDS-1
+workspace = 8, monitor:LVDS-1
+workspace = 9, monitor:LVDS-1
+workspace = 10, monitor:LVDS-1, default:true
 
 # floating-foot
 windowrulev2 = size 677 382,class:^(floating-foot)$
