feat(hyprland): add `app-id` to terminal runnin yazi

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 $mod = SUPER
 $terminal = footclient
 $floatingTerminal = footclient -a floating-foot -e tmux new-session -A -s shession
-$fileManager = $terminal --title "🗂  File Manager" env YAZI_LOG=debug yazi
+$fileManager = $terminal -a Yazi --title "🗂  File Manager" env YAZI_LOG=debug yazi
 $menu = ~/.config/rofi/launcher.sh
 $bar = togglewaybar.sh
 
