refactor(hyprland): use var to reference terminal

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 # https://wiki.hyprland.org/Configuring/Keywords/
 $mod = SUPER
 $terminal = footclient
-$floatingTerminal = footclient -a floating-foot -e tmux new-session -A -s shession
+$floatingTerminal = $terminal -a floating-foot -e tmux new-session -A -s shession
 $fileManager = $terminal -a Yazi --title "🗂  File Manager" env YAZI_LOG=debug yazi
 $menu = ~/.config/rofi/launcher.sh
 $bar = togglewaybar.sh
