refactor(hyprland): rename `clean` submap
To have a more descriptive name

- Add sorrounding comments to be more clear about the submap context

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -266,10 +266,12 @@ bind = $mod, space, togglefloating,
 bind = $mod, X, exec, togglehyprtab.sh 
 bind = $mod SHIFT, Escape, exec, hyprctl dispatcher exit
 
-bind = $mod ALT CTRL SHIFT, Return, submap, clean
-submap = clean
+# Submap: For a global unbinded environment
+bind = $mod ALT CTRL SHIFT, Return, submap, nobindings
+submap = nobindings
 bind = $mod ALT CTRL SHIFT, Return, submap, reset
 submap = reset
+# keybinds further down will be global again...
 
 # Navigation
 bind = $mod, H, movefocus, l
