feat(hyprland): add a `resize` submap
To resize windows with the keyboard

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -273,6 +273,19 @@ bind = $mod ALT CTRL SHIFT, Return, submap, reset
 submap = reset
 # keybinds further down will be global again...
 
+# Submap: Resize
+bind = $mod, R, submap, resize
+submap = resize
+    binde = , H, resizeactive, -10 0
+    binde = , J, resizeactive, 0 10
+    binde = , K, resizeactive, 0 -10
+    binde = , L, resizeactive, 10 0
+    bind = , Escape, submap, reset
+    bind = , Return, submap, reset
+    bind = CTRL, bracketleft, submap, reset
+submap = reset
+# keybinds further down will be global again...
+
 # Navigation
 bind = $mod, H, movefocus, l
 bind = $mod, J, movefocus, d
