--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -13,6 +13,7 @@ $bar = togglewaybar.sh
 #monitor = ,preferred,auto,auto,transform,0
 #monitor = ,preferred,auto,1,mirror, LVDS-1
 monitor = LVDS-1, 1366x768@60, 0x0, 1, transform, 0
+#monitor = LVDS-1, disable
 #monitor = VGA-1, 1680x1050@60, 1366x0, 1, transform, 1
 monitor = HDMI-A-1, 1680x1050@60, -1050x-912, 1, transform, 1
 
