feat(hyprland): improve tabbed groups overall nav
See https://github.com/hyprwm/Hyprland/pull/8601

Move focus within groups and move window in/out of groups easily.
Navigation resembles other WM/compositors as i3/Sway

- Set `movefocus_cycles_groupfirst` option to navigate within a group
  with regular `movefocus` bindings

- Change `movewindow` dispatcher to `movewindoworgroup` to move windows
  in or out groups if they're in a group

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -190,6 +190,7 @@ misc {
 # https://wiki.hyprland.org/Configuring/Variables/#binds
 binds {
     allow_workspace_cycles = true
+    movefocus_cycles_groupfirst = true
     window_direction_monitor_fallback = true
 }
 
@@ -292,10 +293,10 @@ bind = $mod, H, movefocus, l
 bind = $mod, J, movefocus, d
 bind = $mod, K, movefocus, u
 bind = $mod, L, movefocus, r
-bind = $mod SHIFT, H, movewindow, l
-bind = $mod SHIFT, J, movewindow, d
-bind = $mod SHIFT, K, movewindow, u
-bind = $mod SHIFT, L, movewindow, r
+bind = $mod SHIFT, H, movewindoworgroup, l
+bind = $mod SHIFT, J, movewindoworgroup, d
+bind = $mod SHIFT, K, movewindoworgroup, u
+bind = $mod SHIFT, L, movewindoworgroup, r
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
 
@@ -320,7 +321,7 @@ bind = $mod SHIFT, 7, movetoworkspace, 7
 bind = $mod SHIFT, 8, movetoworkspace, 8
 bind = $mod SHIFT, 9, movetoworkspace, 9
 bind = $mod SHIFT, 0, movetoworkspace, 10
-bind = $mod SHIFT, grave, movetoworkspace, special:magic
+bind = $mod SHIFT, grave, movetoworkspacesilent, special:magic
 
 #############
 ### RULES ###
