--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -85,8 +85,8 @@ rules = [
 	{ mime = "application/{json,ndjson}", use = [ "edit", "reveal" ] },
 	{ mime = "*/javascript", use = [ "edit", "reveal" ] },
 	# Documents
-	{ mime = "application/vnd.openxmlformats-officedocument.*", use = [ "libreoffice" ] },
-	{ mime = "application/vnd.oasis.opendocument.text", use = [ "libreoffice" ] },
+	{ mime = "application/openxmlformats-officedocument.*", use = [ "libreoffice" ] },
+	{ mime = "application/oasis.opendocument.text", use = [ "libreoffice" ] },
 	# Empty file
 	{ mime = "inode/empty", use = [ "edit", "reveal" ] },
 	# Fallback
@@ -118,13 +118,12 @@ preloaders = [
 	{ mime = "application/pdf", run = "pdf" },
 	# Font
 	{ mime = "font/*", run = "font" },
-	{ mime = "application/vnd.ms-opentype", run = "font" },
+	{ mime = "application/ms-opentype", run = "font" },
 	# Documents
-	{ mime = "application/vnd.openxmlformats-officedocument.*", run = "office" },
-	{ mime = "application/vnd.oasis.opendocument.*", run = "office" },
-	{ mime = "application/vnd.ms-*", run = "office" },
+	{ mime = "application/openxmlformats-officedocument*", run = "office" },
+	{ mime = "application/oasis.opendocument.*", run = "office" },
+	{ mime = "application/ms-*", run = "office" },
 	{ mime = "application/msword", run = "office" },
-	{ name = "*.docx", run = "office" },
 ]
 previewers = [
 	{ name = "*/", run = "folder", sync = true },
@@ -145,13 +144,12 @@ previewers = [
 	{ mime = "application/{tar,bzip*,7z-compressed,xz,rar,iso9660-image}", run = "archive" },
 	# Font
 	{ mime = "font/*", run = "font" },
-	{ mime = "application/vnd.ms-opentype", run = "font" },
+	{ mime = "application/ms-opentype", run = "font" },
 	# Documents
-	{ mime = "application/vnd.openxmlformats-officedocument.*", run = "office" },
-	{ mime = "application/vnd.oasis.opendocument.*", run = "office" },
-	{ mime = "application/vnd.ms-*", run = "office" },
+	{ mime = "application/openxmlformats-officedocument*", run = "office" },
+	{ mime = "application/oasis.opendocument.*", run = "office" },
+	{ mime = "application/ms-*", run = "office" },
 	{ mime = "application/msword", run = "office" },
-	{ name = "*.docx", run = "office" },
 	# Empty file
 	{ mime = "inode/empty", run = "empty" },
 	# Fallback
