feat(tmux): add `status bar color` configs

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -5,6 +5,10 @@ bind-key C-a send-prefix
 
 # Toggle bar visibility
 bind-key b set-option status
+# Status bar color
+set -g default-terminal "screen-256color"
+set -g status-bg "#97d01a"
+set -g status-fg "#040404"
 
 # Set mouse on
 set-option -g mouse on
