refactor(hyprland): update config to `v0.49.0`

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 $mod = SUPER
 $terminal = footclient
 $floatingTerminal = $terminal -a floating-foot -e tmux new-session -A -s shession
-$fileManager = $terminal -a Yazi --title "🗂  File Manager" env YAZI_LOG=debug yazi
+$fileManager = $terminal -a Yazi --title "🗂  File Manager" bash -c "env YAZI_LOG=debug yazi"
 $menu = ~/.config/rofi/launcher.sh
 $bar = togglewaybar.sh
 
@@ -16,6 +16,7 @@ monitor = LVDS-1, 1366x768@60, 0x0, 1, transform, 0
 #monitor = LVDS-1, disable
 #monitor = VGA-1, 1680x1050@60, 1366x0, 1, transform, 1
 monitor = HDMI-A-1, 1680x1050@60, -1050x-912, 1, transform, 1
+#monitor = HDMI-A-1, disable
 
 exec-once = pcmanfm -d
 exec-once = foot --server
@@ -33,15 +34,17 @@ env = SDL_VIDEODRIVER,wayland
 env = XDG_SESSION_TYPE,wayland
 env = _JAVA_AWT_WM_NONREPARENTING,1
 env = BROWSER,firefox
+env = TERMINAL,$terminal
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     border_size = 1
-    no_border_on_floating = true
+    no_border_on_floating = false
     gaps_in = 2
     gaps_out = 4
     gaps_workspaces = 40
-    col.inactive_border = rgba(595959aa)
+    #col.inactive_border = rgba(595959aa)
+    col.inactive_border = rgba(43485988)
     #col.active_border = rgba(97d01add) rgba(f7d01add) rgba(d72c1add) 45deg
     #col.active_border = rgba(97d01add) rgba(d72c1add) rgba(f7d01add) 45deg
     col.active_border = rgba(97d01add)
@@ -139,6 +142,8 @@ input {
         tap_button_map = lrm
         clickfinger_behavior = true
         drag_lock = true
+        flip_x = false
+        flip_y = false
     }
 }
 
@@ -154,17 +159,33 @@ gestures {
 
 # https://wiki.hyprland.org/Configuring/Variables/#group
 group {
+    auto_group = true
+    col.border_active = rgba(97d01add)
+    col.border_inactive = rgba(43485988)
+    # https://wiki.hyprland.org/Configuring/Variables/#groupbar
     groupbar {
         enabled = true
-        font_size = 8
+        font_size = 14
+        font_weight_active = medium
+        font_weight_inactive = normal
         gradients = true
-        height = 15
+        height = 14
+        indicator_gap = 0
+        indicator_height = 0
         stacked = false
         render_titles = true
+        text_offset = 0
         scrolling = false
-        text_color = 0xffffffff
-        col.active = 0x66ffff00
-        col.inactive = 0x66777700
+        rounding = 4
+        gradient_rounding = 4
+        round_only_edges = false
+        gradient_round_only_edges = true
+        text_color = rgba(000000dd)
+        col.active = rgba(97d01add)
+        col.inactive = rgba(43485988)
+        gaps_in = 0
+        gaps_out = 0
+        keep_upper_gap = false
     }
 }
 
@@ -172,19 +193,26 @@ group {
 misc { 
     disable_hyprland_logo = true
     disable_splash_rendering = true
+    col.splash = rgba(ffffffff)
     font_family = SF Pro Display
+    splash_font_family = SF Pro Display
     force_default_wallpaper = -1
     vfr = false
+    vrr = 0
     mouse_move_enables_dpms = false
     key_press_enables_dpms = false
     animate_manual_resizes = false
     animate_mouse_windowdragging = false
     disable_autoreload = false
     enable_swallow = false
-    mouse_move_focuses_monitor = false
+    #swallow_regex = ^(footclient)$
+    #swallow_exception_regex = ^()$
+    mouse_move_focuses_monitor = true
     background_color = rgba(111111ff)
+    close_special_on_empty = true
     new_window_takes_over_fullscreen = 2
     middle_click_paste = false
+    render_unfocused_fps = 10
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#binds
@@ -197,7 +225,6 @@ binds {
 # https://wiki.hyprland.org/Configuring/Variables/#opengl
 opengl {
     nvidia_anti_flicker = false
-    force_introspection = 1
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#cursor
@@ -241,7 +268,7 @@ bind = ,XF86AudioMute, exec, volfade.sh -m
 bind = ,XF86AudioRaiseVolume, exec, volfade.sh -i
 bind = ,XF86AudioLowerVolume, exec, volfade.sh -d
 bind = $mod, XF86AudioRaiseVolume, exec, pavucontrol --tab=3
-bind = $mod, XF86AudioLowerVolume, exec, pavucontrol --tab=3
+bind = $mod, XF86AudioLowerVolume, exec, $terminal --title 'Volume Control' -- alsamixer
 binde = ,XF86MonBrightnessUp, exec, xbacklight -inc 3 -fps 60 -time 111 -perceived
 binde = ,XF86MonBrightnessDown, exec, xbacklight -dec 3 -fps 60 -time 111 -perceived
 bind = SHIFT, XF86MonBrightnessUp, exec, hyprctl keyword decoration:screen_shader ' '
@@ -255,6 +282,7 @@ bind = $mod, Menu, exec, kblight
 bind = $mod, Return, exec, $terminal
 bind = $mod, grave, togglespecialworkspace, magic
 bind = $mod, A, exec, $menu
+#bindr = $mod, SUPER_L, exec, $menu
 bind = $mod, B, exec, $bar
 bind = $mod, E, exec, $fileManager
 bind = $mod, N, exec, networkmanager_dmenu
@@ -266,6 +294,7 @@ bind = $mod, F, fullscreen, 0
 bind = $mod, Tab, workspace, previous
 bind = $mod, space, togglefloating,
 bind = $mod, X, exec, togglehyprtab.sh 
+#bind = $mod, X, exec, togglegroup
 bind = $mod SHIFT, Escape, exec, hyprctl dispatcher exit
 
 # Submap: For a global unbinded environment
@@ -297,6 +326,8 @@ bind = $mod SHIFT, H, movewindoworgroup, l
 bind = $mod SHIFT, J, movewindoworgroup, d
 bind = $mod SHIFT, K, movewindoworgroup, u
 bind = $mod SHIFT, L, movewindoworgroup, r
+bind = $mod CTRL, H, movegroupwindow, b
+bind = $mod CTRL, L, movegroupwindow
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
 
@@ -333,10 +364,10 @@ bind = $mod SHIFT, grave, movetoworkspacesilent, special:magic
 
 # Global Rules
 windowrulev2 = suppressevent maximize,class:.*
-workspace = special:magic, on-created-empty:$floatingTerminal, border:false
+workspace = special:magic, on-created-empty:$floatingTerminal, border:true
 
 # Monitor Rules
-workspace = m[HDMI-A-1], gapsin:8, gapsout:16
+workspace = m[HDMI-A-1], gapsin:8, gapsout:16, bordersize:1
 workspace = 1, monitor:HDMI-A-1, default:true
 workspace = 2, monitor:HDMI-A-1
 workspace = 3, monitor:HDMI-A-1
@@ -349,7 +380,8 @@ workspace = 9, monitor:LVDS-1
 workspace = 10, monitor:LVDS-1, default:true
 
 # floating-foot
-windowrulev2 = size 677 382,class:^(floating-foot)$
+#windowrulev2 = size 677 382,class:^(floating-foot)$
+windowrulev2 = size 675 364,class:^(floating-foot)$
 windowrulev2 = float,class:^(floating-foot)$
 windowrulev2 = pseudo,class:^(floating-foot)$
 windowrulev2 = tile,class:^(floating-foot)$
@@ -380,6 +412,15 @@ windowrulev2 = float,class:^(scrcpy)$,title:^(SM-G935F)$
 windowrulev2 = size 32% 99%,class:^(scrcpy)$,title:^(SM-G935F)$
 windowrulev2 = tile,class:^(scrcpy)$,title:^(SM-G935F)$
 windowrulev2 = pseudo,class:^(scrcpy)$,title:^(SM-G935F)$
+
+# smart gaps
+# https://wiki.hyprland.org/Configuring/Workspace-Rules/#smart-gaps-ignoring-special-workspaces
+#workspace = w[tv1]s[false], gapsout:0, gapsin:0
+#workspace = f[1]s[false], gapsout:0, gapsin:0
+#windowrule = bordersize 0, floating:0, onworkspace:w[tv1]s[false]
+#windowrule = rounding 0, floating:0, onworkspace:w[tv1]s[false]
+#windowrule = bordersize 0, floating:0, onworkspace:f[1]s[false]
+#windowrule = rounding 0, floating:0, onworkspace:f[1]s[false]
 
 # swayimg
 windowrulev2 = immediate 1, class:^(swayimg)$
