--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -83,7 +83,7 @@ rules = [
 	# Image
 	{ mime = "image/*", use = [ "open", "gimp", "reveal" ] },
 	# Media
-	{ mime = "{audio,video}/*", use = [ "play", "reveal" ] },
+	{ mime = "{audio,video}/*", use = [ "play", "audacity" ] },
 	# Archive
 	{ mime = "application/{,g}zip", use = [ "extract", "reveal" ] },
 	{ mime = "application/{tar,bzip*,7z-compressed,xz,rar}", use = [ "extract", "reveal" ] },
