refactor(foot): change cursor options
- Add blink rate

- Change colors

- Add beam thickness

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -17,7 +17,9 @@ indicator-position=none
 style=underline
 unfocused-style=hollow
 blink=yes
-color=ff0000 76b539
+blink-rate=500
+color=040404 76b539
+beam-thickness=2px
 underline-thickness=2px
 
 [mouse]
