--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -9,9 +9,10 @@
 [manager]
 # https://yazi-rs.github.io/docs/configuration/keymap#manager
 keymap = [
-	{ on = "<Esc>", run = "escape",             desc = "Exit visual mode, clear selected, or cancel search" },
-	{ on = "<C-[>", run = "escape",             desc = "Exit visual mode, clear selected, or cancel search" },
+	{ on = "<Esc>", run = "escape --all",       desc = "Exit visual mode, clear selected, or cancel search" },
+	{ on = "<C-[>", run = "escape --all",       desc = "Exit visual mode, clear selected, or cancel search" },
 	{ on = "<C-w>", run = "close",              desc = "Close the current tab, or quit if it is last tab" },
+	{ on = "<C-d>", run = "close",              desc = "Close the current tab, or quit if it is last tab" },
 	{ on = "<C-q>", run = "quit --no-cwd-file", desc = "Exit the process without writing cwd-file" },
 
 	# Hopping
