--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -24,12 +24,10 @@ keymap = [
 	{ on = "<PageDown>", run = "arrow 100%",  desc = "Move cursor down one page" },
 
 	# Navigation
-	{ on = "h", run = "leave",                     desc = "Go back to the parent directory" },
-#	{ on = "l", run = "plugin --sync smart-enter", desc = "Open file/Enter directory" },
-#	For upcoming Yazi 0.4 (nightly version):
-	{ on = "l", run = "plugin smart-enter",        desc = "Open file/Enter directory" },
-	{ on = "H", run = "back",                      desc = "Go back to the previous directory" },
-	{ on = "L", run = "forward",                   desc = "Go forward to the next directory" },
+	{ on = "H", run = "leave",                     desc = "Go back to the parent directory" },
+	{ on = "L", run = "plugin smart-enter",        desc = "Go to child directory/Open file" },
+	{ on = "h", run = "back",                      desc = "Go back to the previous directory" },
+	{ on = "l", run = "enter",                     desc = "Go to child directory" },
 
 	# Previewer
 #	{ on = "i",    run = "plugin --sync max-preview",desc = "Maximize or restore preview" },
