feat(hypr): set `$EDITOR` env through Hyprland

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,6 +7,7 @@ $floatingTerminal = $terminal -a floating-foot -e tmux new-session -A -s shessio
 $fileManager = $terminal -a Yazi --title "🗂  File Manager" bash -c "env YAZI_LOG=debug yazi"
 $menu = ~/.config/rofi/launcher.sh
 $bar = togglewaybar.sh
+$editor = nvim
 
 # https://wiki.hyprland.org/Configuring/Monitors/
 #monitor = name, resolution, position, scale, transform, 0
@@ -35,6 +36,7 @@ env = XDG_SESSION_TYPE,wayland
 env = _JAVA_AWT_WM_NONREPARENTING,1
 env = BROWSER,firefox
 env = TERMINAL,$terminal
+env = EDITOR,$editor
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
