--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -288,7 +288,7 @@ bind = $mod, A, exec, $menu
 bind = $mod, B, exec, $bar
 bind = $mod, E, exec, $fileManager
 bind = $mod, N, exec, networkmanager_dmenu
-bind = $mod, S, exec, $terminal -- vim -c ":pa simplenote.vim | :SimplenoteList"
+bind = $mod, S, exec, $terminal -- $editor -c ":SimplenoteList"
 
 # Window manager functions
 bind = $mod, Q, killactive
