refactor(hypr): modeline filetype to hyprlang
- Change vim's modeline setting filetype to hyprlang

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -206,8 +206,8 @@ misc {
     animate_manual_resizes = false
     animate_mouse_windowdragging = false
     disable_autoreload = false
-    enable_swallow = false
-    #swallow_regex = ^(footclient)$
+    enable_swallow = true
+    swallow_regex = ^(footclient)$
     #swallow_exception_regex = ^()$
     mouse_move_focuses_monitor = true
     background_color = rgba(111111ff)
@@ -441,4 +441,4 @@ windowrulev2 = float,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
 windowrulev2 = pseudo,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
 windowrulev2 = tile,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
 
-# vim: ft=hypr tabstop=4 shiftwidth=4 expandtab ai
+# vim: ft=hyprlang tabstop=4 shiftwidth=4 expandtab ai
