--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -206,7 +206,7 @@ misc {
     animate_manual_resizes = false
     animate_mouse_windowdragging = false
     disable_autoreload = false
-    enable_swallow = true
+    enable_swallow = false
     swallow_regex = ^(footclient)$
     #swallow_exception_regex = ^()$
     mouse_move_focuses_monitor = true
