refactor(foot): emulate `ESC` sequence with `Ctrl+[`
To easily escape from foot's `url-bindings` and `search-bindings` modes

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -71,7 +71,7 @@ unicode-input=Control+Shift+u
 #quit=Control+q
 
 [search-bindings]
-cancel=Control+c Escape
+cancel=Control+bracketleft Escape
 delete-prev-word=none
 delete-next-word=none
 extend-to-word-boundary=none
@@ -81,7 +81,7 @@ clipboard-paste=Mod1+v
 primary-paste=none
 
 [url-bindings]
-cancel=Control+c Escape
+cancel=Control+bracketleft Escape
 toggle-url-visible=t
 
 [mouse-bindings]
