--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -5,7 +5,7 @@
 "$schema" = "https://yazi-rs.github.io/schemas/yazi.json"
 
 # https://yazi-rs.github.io/docs/configuration/yazi#manager
-[manager]
+[mgr]
 ratio          = [ 3, 6, 8 ]
 sort_by        = "alphabetical"
 sort_sensitive = false
