refactor(hyprland): change rounding decorations
- Set `rounding` to 10

- Add `rounding_power` config argument

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -56,7 +56,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 4
+    rounding = 10
+    rounding_power = 4.0
     active_opacity = 1.0
     inactive_opacity = 0.85
     fullscreen_opacity = 1.0
