refactor(hyprland): move `decoration:shadow` section
To conform with the hyprland wiki documentation

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -66,19 +66,7 @@ decoration {
     dim_special = 0.2
     dim_around = 0.4
     #screen_shader = ~/.config/hypr/blue-light-filter.frag
-
-    # https://wiki.hyprland.org/Configuring/Variables/#shadow
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 4
-        sharp = false
-        ignore_window = true
-        color = rgba(1a1a1aee)
-        color_inactive = rgba(00000000)
-        offset = 0, 0
-        scale = 1.0
-    }
+    border_part_of_window = true
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -92,6 +80,19 @@ decoration {
         brightness = 0.8172
         vibrancy = 0.1696
         vibrancy_darkness = 0.0
+    }
+
+    # https://wiki.hyprland.org/Configuring/Variables/#shadow
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 4
+        sharp = false
+        ignore_window = true
+        color = rgba(1a1a1aee)
+        color_inactive = rgba(00000000)
+        offset = 0, 0
+        scale = 1.0
     }
 }
 
