--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -433,14 +433,15 @@ windowrulev2 = immediate 1, class:^(swayimg)$
 layerrule = animation slide,waybar
 
 # V4L2 Viewer
-windowrulev2 = opaque,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
-windowrulev2 = forcergbx,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
-windowrulev2 = noblur,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
-windowrulev2 = nodim,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
-windowrulev2 = noshadow,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
-windowrulev2 = xray off,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
-windowrulev2 = float,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
-windowrulev2 = pseudo,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
-windowrulev2 = tile,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|Capture)
+windowrulev2 = opaque,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
+windowrulev2 = forcergbx,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
+windowrulev2 = noblur,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
+windowrulev2 = nodim,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
+windowrulev2 = noshadow,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
+windowrulev2 = xray off,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
+windowrulev2 = float,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
+# windowrulev2 = pseudo,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
+# windowrulev2 = tile,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
+windowrulev2 = pin,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
 
 # vim: ft=hyprlang tabstop=4 shiftwidth=4 expandtab ai
