refactor(hyprland): change vim modeline settings
- Add `softtabstop` setting

- Change `tabstop` from ``4` to `8`

- Abbreviate modeline fields

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -444,4 +444,4 @@ windowrulev2 = float,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
 # windowrulev2 = tile,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
 windowrulev2 = pin,class:^(qvidcap|qv4l2)$,title:(V4L2 Viewer|V4L2 Capture.*)
 
-# vim: ft=hyprlang tabstop=4 shiftwidth=4 expandtab ai
+# vim: ft=hyprlang ts=8 sts=4 sw=4 et ai
