--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -271,6 +271,8 @@ master {
 bind = ,XF86AudioMute, exec, volfade-rs toggle-mute
 bind = ,XF86AudioRaiseVolume, exec, volfade-rs increase 11
 bind = ,XF86AudioLowerVolume, exec, volfade-rs decrease 7
+bind = SHIFT, XF86AudioRaiseVolume, exec, volfade-rs inc 1
+bind = SHIFT, XF86AudioLowerVolume, exec, volfade-rs dec 1
 bind = $mod, XF86AudioRaiseVolume, exec, pavucontrol --tab=3
 bind = $mod, XF86AudioLowerVolume, exec, $terminal --title 'Volume Control' -- alsamixer
 binde = ,XF86MonBrightnessUp, exec, xbacklight -inc 3 -fps 60 -time 111 -perceived
